--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
-  <a class="footer_item" href="/">home</a>
-  <a class="footer_item" href="/about">about</a>
+  <a class="footer_item" href="/potholes">home</a>
+  <a class="footer_item" href="/potholes/about">about</a>
   <!-- <a class="footer_item" href="/projects">projects</a> -->
-  <a class="footer_item" href="/resume/Eric_Ertl_Resume.pdf">resume</a>
+  <!-- <a class="footer_item" href="/resume/Eric_Ertl_Resume.pdf">resume</a> -->
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
 </footer>
 <script src="/assets/js/main.js" defer="defer"></script>
