--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <a class="footer_item" href="/potholes">home</a>
-  <a class="footer_item" href="/potholes/about">about</a>
+  <!-- <a class="footer_item" href="/potholes/about">about</a> -->
   <!-- <a class="footer_item" href="/projects">projects</a> -->
   <!-- <a class="footer_item" href="/resume/Eric_Ertl_Resume.pdf">resume</a> -->
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
