--- a/_layouts/pagejs.html
+++ b/_layouts/pagejs.html
@@ -37,6 +37,10 @@ layout: compress
       {% for js in page.customjs %}
       <script async type="text/javascript" src="{{ js }}"></script>
       {% endfor %}
+      <script async
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpWNzdKlQOhBaPEfjXBVmLuk2mzsbH2ZE&callback=initMap">
+      </script>
+      <div id="map"></div>
       {% include anchor_headings.html html=content anchorClass="anchor-head" beforeHeading=true h_min=4 h_max=4 %}
     </main>
     {% include footer.html %}
